--- a/etersoft-build-utils/Makefile
+++ b/etersoft-build-utils/Makefile
@@ -17,6 +17,6 @@ install:
 	install -m 644 etc/config $(sysconfdir)/eterbuild/
 	install -m 644 etc/repos $(sysconfdir)/eterbuild/
 	#install -m 644 apt/apt.conf.* apt/sources.list.* %buildroot/%_sysconfdir/apt/
-	install -m 644 share/pkgrepl/pkgrepl.* $(datadir)/eterbuild/pkgrepl/
-	install -m 644 share/grprepl/grprepl.* $(datadir)/eterbuild/grprepl/
-	install -m 644 share/* $(datadir)/eterbuild/ || :
+	install -m 644 share/eterbuild/pkgrepl/pkgrepl.* $(datadir)/eterbuild/pkgrepl/
+	install -m 644 share/eterbuild/grprepl/grprepl.* $(datadir)/eterbuild/grprepl/
+	install -m 644 share/eterbuild/* $(datadir)/eterbuild/ || :
