add support for APTCONF in /etc/eterbuild add initial support for apt/sources.list in the source tree

--- a/etersoft-build-utils/share/eterbuild/functions/config
+++ b/etersoft-build-utils/share/eterbuild/functions/config
@@ -32,7 +32,10 @@ is_git()
 }
 
 RPMDIR="$HOME/RPM"
-[ -n "$APTCONF" ] || APTCONF=$ETERBUILDETC/apt/apt.conf
+
+# apt.conf.SS is exists by default
+[ -n "$APTCONF" ] || APTCONF=$ETERBUILDETC/apt/apt.conf.SS
+
 #OWNERMAIL=`grep "^%packager" ~/.rpmmacros | head -n 1 | sed -e "s/%packager[ \t]*//g"`
 OWNERMAIL=`rpm --eval %packager`
 
