--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -16,7 +16,7 @@ OURTMPDIR=$TMPDIR
 [ -z "$OURTMPDIR" ] || [ -d "$OURTMPDIR" ] || OURTMPDIR=/tmp
 
 # It can be overrides in config
-DEFAULTARCH=i586
+[ -n "$DEFAULTARCH" ] || DEFAULTARCH=i586
 [ `uname -m` = "x86_64" ] && DEFAULTARCH=`uname -m`
 NICE="nice"
 RPMBUILD=rpmbuild
@@ -34,8 +34,7 @@ is_git()
 
 RPMDIR="$HOME/RPM"
 
-# apt.conf.SS is exists by default
-[ -n "$APTCONF" ] || APTCONF=$ETERBUILDETC/apt/apt.conf.SS
+[ -n "$APTCONFBASE" ] || APTCONFBASE=$ETERBUILDETC/apt/apt.conf
 
 #OWNERMAIL=`grep "^%packager" ~/.rpmmacros | head -n 1 | sed -e "s/%packager[ \t]*//g"`
 OWNERMAIL=`rpm --eval %packager`
