--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -25,8 +25,11 @@ RPMBUILD=rpmbuild
 is_git()
 {
 	local DIR=$1
+	[ -n "$IGNOREGEAR" ] && return 1
 	[ -n "$DIR" ] && [ -d "$DIR/.git" ] && return 0
+	[ -n "$DIR" ] && [ -d "$DIR/.gear" ] && return 0
 	[ -d ".git" ] && return 0
+	[ -d ".gear" ] && return 0
 	# hack for support spec in some subdir
 	[ -d "../.gear" ] && return 0
 	return 1
