replace RPMDIR using with RPMTOPDIR which can be overrided

--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -22,6 +22,8 @@ NICE="nice"
 RPMBUILD=rpmbuild
 
 RPMDIR="$HOME/RPM"
+# Can be overrided in the scripts
+[ -n "$RPMTOPDIR" ] || RPMTOPDIR="$RPMDIR"
 
 [ -n "$APTCONFBASE" ] || APTCONFBASE=$ETERBUILDETC/apt/apt.conf
 
