--- a/share/eterbuild/functions/build
+++ b/share/eterbuild/functions/build
@@ -175,12 +175,17 @@ check_log()
 	echo "-------------------------------------------------------"
 	echog "Check log for..."
 	LOGFILE=$1
-	grep 'ld: warning: libstdc++\.so\.5, needed by [^ ]\+, may conflict with libstdc++\.so\.6' $LOGFILE
-	RES=$?
-	if [ $RES = 0 ] ; then
-		echog "Error: libstdc++.so.5/6 conflicts"
+	
+	if grep -q 'ld: warning: libstdc++\.so\.5, needed by [^ ]\+, may conflict with libstdc++\.so\.6' $LOGFILE ; then
+		echog "Error found: libstdc++.so.5/6 conflicts. Check the log."
 		return 1
 	fi
+
+	if grep -q 'will always overflow destination buffer' $LOGFILE ; then
+		echog "Error found: will always overflow destination buffer. Check the log."
+		return 1
+	fi
+
 	grep 'python-strict' $LOGFILE && warning "python-strict used!!!"
 	NC1="command not found"
 	NC2="-march=athlon -mtune=athlon-xp"
