--- a/share/eterbuild/functions/build
+++ b/share/eterbuild/functions/build
@@ -102,7 +102,13 @@ uni_rpminstall()
 # build LISTBUILT list with src.rpm full path
 pack_src_rpm()
 {
-local i
+local i COMMIT
+
+if [ "$1" = "--commit" ] ; then
+	shift
+	COMMIT="--commit"
+fi
+
 ARGS=$@
 # NOTE: always nodeps
 # enable --nodeps for other ENV
@@ -134,10 +140,10 @@ do
 				sleep 10
 				exit 1
 			fi
-			uni_rpmbuild $i -bs $ARGS $NODEPS --target $DEFAULTARCH
+			uni_rpmbuild $COMMIT $i -bs $ARGS $NODEPS --target $DEFAULTARCH
 		else
 			echog "Just packing \$NAMESRPMIN"
-			uni_rpmbuild $i -bs $ARGS $NODEPS --target $DEFAULTARCH || fatal "Error with rpmbuild"
+			uni_rpmbuild $COMMIT $i -bs $ARGS $NODEPS --target $DEFAULTARCH || fatal "Error with rpmbuild"
 		fi
 
 		# Check the package really built
