myhsh: enable error if there are unpackaged files int the build, add NOSTRICT_UNPACKAGED param in config for disable new behaviour

--- a/etc/config
+++ b/etc/config
@@ -73,3 +73,6 @@
 
 # username on $GIRARHOST host
 # GIRAR_USER=lav
+
+# Skip error if there are unpackaged files in the build
+#NOSTRICT_UNPACKAGED=1
