convert comments to utf8

--- a/etc/config
+++ b/etc/config
@@ -7,23 +7,23 @@
 # You can copy this file as ~/.eterbuild-config for per user settings
 # and uncomment any setting line
 
-# Путь к каталогу сборки hasher:
+# п÷я┐я┌я▄ п╨ п╨п╟я┌п╟п╩п╬пЁя┐ я│п╠п╬я─п╨п╦ hasher:
 #HASHERDIR=~/hasher
 #HASHER_ARG=""
 
-# Удалённый сборочный сервер в нотации ssh
+# пёп╢п╟п╩я▒п╫п╫я▀п╧ я│п╠п╬я─п╬я┤п╫я▀п╧ я│п╣я─п╡п╣я─ п╡ п╫п╬я┌п╟я├п╦п╦ ssh
 #BUILDSERVER="builder"
 
-# TODO: Каталог на сборочном сервере с собранными пакетами
+# TODO: п п╟я┌п╟п╩п╬пЁ п╫п╟ я│п╠п╬я─п╬я┤п╫п╬п╪ я│п╣я─п╡п╣я─п╣ я│ я│п╬п╠я─п╟п╫п╫я▀п╪п╦ п©п╟п╨п╣я┌п╟п╪п╦
 #BUILDSERVERPATH=$HASHERDIR/repo/i586/RPMS.hasher
 
-# Кому отправлять отчёт, на какой адрес
+# п п╬п╪я┐ п╬я┌п©я─п╟п╡п╩я▐я┌я▄ п╬я┌я┤я▒я┌, п╫п╟ п╨п╟п╨п╬п╧ п╟п╢я─п╣я│
 #OWNERMAIL="Vitaly Lipatov <lav@altlinux.ru>"
 
-# Повышенная говорливость
+# п÷п╬п╡я▀я┬п╣п╫п╫п╟я▐ пЁп╬п╡п╬я─п╩п╦п╡п╬я│я┌я▄
 #DEBUG="-v"
 
-# Каталог сборки, указываемый в переменной %_tmppath .rpmmacros
+# п п╟я┌п╟п╩п╬пЁ я│п╠п╬я─п╨п╦, я┐п╨п╟п╥я▀п╡п╟п╣п╪я▀п╧ п╡ п©п╣я─п╣п╪п╣п╫п╫п╬п╧ %_tmppath .rpmmacros
 #BUILDROOT=
 
 # You can uncomment it:
@@ -33,24 +33,24 @@
 #APTCONFBASE=/etc/apt/apt.conf
 #REMOTERPMDIR="~/RPM"
 
-# Каталог, куда копируются подписанные src.rpm
+# п п╟я┌п╟п╩п╬пЁ, п╨я┐п╢п╟ п╨п╬п©п╦я─я┐я▌я┌я│я▐ п©п╬п╢п©п╦я│п╟п╫п╫я▀п╣ src.rpm
 #UPLOADDIR=$RPMDIR/upload
 
-# Адрес ftp-сервера компании
+# п░п╢я─п╣я│ ftp-я│п╣я─п╡п╣я─п╟ п╨п╬п╪п©п╟п╫п╦п╦
 #COMPANYFTP=etersoft.ru
 
-# Базовый каталог расположения ftp-сервера (поддерживаются локальные и ssh-пути)
+# п▒п╟п╥п╬п╡я▀п╧ п╨п╟я┌п╟п╩п╬пЁ я─п╟я│п©п╬п╩п╬п╤п╣п╫п╦я▐ ftp-я│п╣я─п╡п╣я─п╟ (п©п╬п╢п╢п╣я─п╤п╦п╡п╟я▌я┌я│я▐ п╩п╬п╨п╟п╩я▄п╫я▀п╣ п╦ ssh-п©я┐я┌п╦)
 #TARGETFTPBASE=ftp.eter:/var/ftp
 
-# Каталог для записи протоколов сборки
+# п п╟я┌п╟п╩п╬пЁ п╢п╩я▐ п╥п╟п©п╦я│п╦ п©я─п╬я┌п╬п╨п╬п╩п╬п╡ я│п╠п╬я─п╨п╦
 #LOGDIR=$RPMDIR/log
 
 #RSYNCSISYPHUS=rsync.altlinux.org::ALTLinux/Sisyphus
 
-# Базовый SSH-путь для отправки пакетов
+# п▒п╟п╥п╬п╡я▀п╧ SSH-п©я┐я┌я▄ п╢п╩я▐ п╬я┌п©я─п╟п╡п╨п╦ п©п╟п╨п╣я┌п╬п╡
 #RSYNCINCOMING=incoming:/incoming
 
-# Ключ, используемый при отправке
+# п п╩я▌я┤, п╦я│п©п╬п╩я▄п╥я┐п╣п╪я▀п╧ п©я─п╦ п╬я┌п©я─п╟п╡п╨п╣
 #SSH_KEYFILE=~/.ssh/id_dsa
 
 # See sisyphus_check --help for other options
