remove obsoleted ChangeLog, move obsoleted scripts, dont pack it

--- a/po/Makefile
+++ b/po/Makefile
@@ -14,7 +14,7 @@ all: etersoft-build-utils.mo
 etersoft-build-utils.mo: etersoft-build-utils.po
 	$(MSGFMT) -c -o t-$@ $< && mv t-$@ $@
 
-etersoft-build-utils.pot: $(SCRIPTLIST) ../tools/upload-to-alt Makefile
+etersoft-build-utils.pot: $(SCRIPTLIST) Makefile
 	ls -1 -d ../bin/* | xargs xgettext -a -o $@ -L Shell --from-code=koi8-r $^ || :
 
 etersoft-build-utils.po: etersoft-build-utils.pot
