add SSHTIMEOUT var and use timeout command for ssh operations in gpush

--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -50,6 +50,8 @@ CURRENTBRANCHNAME="M51"
 
 #SSH_KEYFILE=~/.ssh/id_dsa
 GIRARHOST=git.alt
+# Timeout in sec for ssh commands
+SSHTIMEOUT=30
 
 BUILDSERVER=
 
