--- a/share/eterbuild/functions/build
+++ b/share/eterbuild/functions/build
@@ -160,10 +160,10 @@ do
 				sleep 10
 				exit 1
 			fi
-			uni_rpmbuild $COMMIT $i -bs $ARGS $NODEPS --target $DEFAULTARCH
+			uni_rpmbuild $COMMIT $i -bs $ARGS $NODEPS --target $SYSARCH
 		else
 			echog "Just packing \$NAMESRPMIN"
-			uni_rpmbuild $COMMIT $i -bs $ARGS $NODEPS --target $DEFAULTARCH || fatal "Error with rpmbuild"
+			uni_rpmbuild $COMMIT $i -bs $ARGS $NODEPS --target $SYSARCH || fatal "Error with rpmbuild"
 		fi
 
 		# Check the package really built
