--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -46,6 +46,9 @@ HASHERARG=""
 # for use in help as example branch/distro name
 CURRENTBRANCHNAME="M51"
 
+# Build for Sisyphus by default
+MENV=SS
+
 [ -n "$DEBUG" ] && HASHERARG="-v $HASHERARG"
 
 #SSH_KEYFILE=~/.ssh/id_dsa
