rpmgp: add support for clone via public url

--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -53,6 +53,8 @@ MENV=SS
 
 #SSH_KEYFILE=~/.ssh/id_dsa
 GIRARHOST=git.alt
+GIRARURL="http://git.altlinux.org"
+
 # Timeout in sec for ssh commands
 SSHTIMEOUT=300
 
