--- a/share/eterbuild/functions/config
+++ b/share/eterbuild/functions/config
@@ -52,6 +52,7 @@ MENV=SS
 [ -n "$DEBUG" ] && HASHERARG="-v $HASHERARG"
 
 #SSH_KEYFILE=~/.ssh/id_dsa
+RELEASEPREFIX=alt
 GIRARHOST=git.alt
 GIRARURL="http://git.altlinux.org"
 
