remove all temp generated src.rpm, sources, specs

--- a/share/eterbuild/functions/build
+++ b/share/eterbuild/functions/build
@@ -116,6 +116,18 @@ uni_rpminstall()
 	return $RET
 }
 
+# remove source and spec
+uni_rpmrm()
+{
+	local TWOPARAM="-v"
+
+	if [ -n "$RPMTOPDIR" ] ; then
+		TWOPARAM="--define=_topdir $RPMTOPDIR"
+	fi
+
+	$RPMBUILD "$TWOPARAM" --rmsource --rmspec $@
+}
+
 
 # LISTNAMES, options in arg
 # build LISTBUILT list with src.rpm full path
