--- a/etc/config
+++ b/etc/config
@@ -83,5 +83,10 @@
 
 # distcc support in jmake
 # https://wiki.office.etersoft.ru/devel/distrubutedcompilation
-# DISTCC_HOSTS="euclid atlant"
-# DISTCC_HOSTS_NUM=12
+# i586 only systems
+# DISTCC_32_HOSTS="euclid atlant"
+# DISTCC_32_HOSTS_NUM=12
+
+# x86_64 (gcc -m32 supports too)
+# DISTCC_64_HOSTS="builder64"
+# DISTCC_64_HOSTS_NUM=12
